--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="title_activity_maps">Map</string>
     <string name="restaurantes">Restaurantes</string>
     <string name="mapa">Mapa</string>
+    <string name="title_activity_restaurante">Restaurante</string>
 </resources>
