--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,4 +18,13 @@
     <string name="number_0">0</string>
     <string name="add">+</string>
     <string name="quit">-</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="tu_orden">Tu Orden</string>
+    <string name="confirmar_pedido">Confirmar Pedido</string>
+    <string name="total">Total:</string>
+    <string name="subtotal">Subtotal</string>
+    <string name="pedido_confirmado">¡Pedido Confirmado!</string>
+    <string name="mensaje_tiempo_entrega">Tu pedido llegará en</string>
 </resources>
